Added VSCode docker dev env extensions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,7 +42,8 @@
         "Gruntfuggly.todo-tree",
         "ms-python.vscode-pylance",
         "matangover.mypy",
-        "sourcegraph.cody-ai"
+        "sourcegraph.cody-ai",
+        "donjayamanne.git-extension-pack"
       ]
     }
   }
