--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,9 +14,10 @@ services:
       - docker_db
     volumes:
       - ../code/:/opt/moodfitnesstracker/
+    ports:
+      - 8501:8501
 
-    entrypoint: ["streamlit", "run", "code/app.py"]
-    # entrypoint: [ "/bin/bash" ]
+    entrypoint: ["streamlit", "run", "/opt/moodfitnesstracker/app.py"]
 
   docker_db:
     image: postgres:16.1-bookworm
