Enhanced sleep slider precision; Dev compose port
Improved the sleep tracking slider to accept more granular half-hour
increments, allowing for more precise user input on sleep duration.
Adjusted the Docker Compose configuration to target development
environment and expose the service on the standard HTTP port 80

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,14 +8,14 @@ services:
     build:
       context: ..
       dockerfile: Dockerfile
-      target: production
+      target: development
     restart: on-failure
     depends_on:
       - docker_db
     volumes:
       - ../code/:/opt/moodfitnesstracker/
     ports:
-      - 8501:8501
+      - 80:8501
 
     entrypoint: ["streamlit", "run", "/opt/moodfitnesstracker/app.py"]
 
