Adjust Docker PostgreSQL to use named volume
Introduced a named volume 'pgdata' to persist PostgreSQL data, preventing data loss when the container is removed.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -29,8 +29,12 @@ services:
 
     volumes:
       - ../docker/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - pgdata:/var/lib/postgresql/data
 
     # Prevent conflict with default port 5432 of potential
     # existing Postgres instance on the host system.
     ports:
       - 5433:5432
+
+volumes:
+  pgdata:
