--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,17 +14,19 @@ services:
       - docker_db
     volumes:
       - ../code/:/opt/moodfitnesstracker/
+      - ../docker/.env:/opt/env_file/.env:ro
     ports:
       - 80:8501
-
     entrypoint: ["streamlit", "run", "/opt/moodfitnesstracker/app.py"]
 
   docker_db:
     image: postgres:16.1-bookworm
     restart: unless-stopped
+    env_file: .env
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      # postgres pw from .env file
+      - POSTGRES_PASSWORD=${PG_PASSWORD}
       - POSTGRES_DB=moodfit_db
 
     volumes:
