--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ tqdm = "^4.65.0"
 streamlit = "^1.30.0"
 sqlalchemy = "^2.0.25"
 psycopg2 = "^2.9.9"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
