Update dependencies and change project name to vitaltracker
Upgraded various packages in poetry.lock

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "moodfitnesstracker"
+name = "vitaltracker"
 version = "0.0.1"
 description = "Tracking mood and fitness"
 authors = ["cyclux <nevermind@cyclux.de>"]
