Refactor project to VitalTracker name
- Rename APP_NAME from 'moodfitnesstracker' to 'vitaltracker' across Docker configurations
- Update references from old app name to new for seamless container operation
- Switch working directory and streamlit entry point in line with new project structure

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   docker_moodfit:
     container_name: python311
-    image: cyclux/moodfitnesstracker:latest
+    image: cyclux/vitaltracker:latest
     build:
       context: ..
       dockerfile: Dockerfile
@@ -13,11 +13,11 @@ services:
     depends_on:
       - docker_db
     volumes:
-      - ../code/:/opt/moodfitnesstracker/
-      - ../docker/.env:/opt/env_file/.env:ro
+      - ../vitaltracker/:/opt/vitaltracker/
+      - ../docker/.env:/opt/vitaltracker/.env:ro
     ports:
       - 80:8501
-    entrypoint: ["streamlit", "run", "/opt/moodfitnesstracker/app.py"]
+    entrypoint: ["streamlit", "run", "/opt/vitaltracker/app.py"]
 
   docker_db:
     image: postgres:16.1-bookworm
