--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,6 @@ pytest-cov = "^4.0.0"
 ipykernel = "^6.22.0"
 ipywidgets = "^8.0.6"
 ruff = "^0.1.13"
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
