--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,11 @@ streamlit = "^1.30.0"
 sqlalchemy = "^2.0.25"
 psycopg2 = "^2.9.9"
 python-dotenv = "^1.0.0"
+plotly = "^5.18.0"
+ipywidgets = "^8.1.1"
+ipykernel = "^6.29.0"
+nbformat = "^5.9.2"
+seaborn = "^0.13.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
@@ -25,6 +30,7 @@ pytest-cov = "^4.0.0"
 ipykernel = "^6.22.0"
 ipywidgets = "^8.0.6"
 ruff = "^0.1.13"
+pandas-stubs = "^2.1.4.231227"
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
